# flowerpot

./: .envrc  .gitignore  Cargo.toml  README.md  flake.nix
bouquet/: Cargo.toml
bouquet/src/: address.rs  block.rs  blockchain.rs  keypair.rs  main.rs  message.rs  transaction.rs
libflowerpot/: Cargo.toml  README.md
libflowerpot/src/: address.rs  blob.rs  block.rs  crypto.rs  lib.rs  message.rs  node.rs  transaction.rs  varint.rs  viewer.rs
libflowerpot/src/crypto/: base64.rs  hash.rs  key_exchange.rs  mod.rs  sign.rs
libflowerpot/src/node/: handler.rs  mod.rs  tracker.rs  validator.rs
libflowerpot/src/node/handlers/: approve_block.rs  ask_block.rs  ask_history.rs  ask_message.rs  ask_pending_blocks.rs  ask_pending_messages.rs  ask_pending_transactions.rs  ask_transaction.rs  block.rs  message.rs  mod.rs  pending_blocks.rs  pending_messages.rs  pending_transactions.rs  transaction.rs
libflowerpot/src/protocol/: mod.rs  network.rs  packet_stream.rs  packets.rs
libflowerpot/src/storage/: mod.rs  ram_storage.rs  sqlite_storage.rs
src/: block.rs  client.rs  crypto.rs  lib.rs  network.rs  node.rs  pool.rs  protocol.rs  security.rs  transaction.rs  validator.rs  viewer.rs
src/protocol/: mod.rs  packet_stream.rs
src/shard/: blocks_api.rs  mod.rs  shards_api.rs  sync_api.rs  transactions_api.rs
src/storage/: file_storage.rs  mod.rs  ram_storage.rs  sqlite_storage.rs
