[package]
name = "libflowerpot"
version = "0.1.0"
authors = ["Nikita Podvirnyi <krypt0nn@vk.com>"]
license = "GPL-3.0-or-later"
edition = "2024"
publish = false

[features]
_http = ["dep:futures", "dep:reqwest"]
tracing = ["dep:tracing"]

ram_storage = []
sqlite_storage = ["dep:rusqlite"]

client = ["_http"]
shard = ["_http", "client", "dep:tokio", "dep:axum"]
validator = ["_http", "client"]

default = [
    "tracing",
    "ram_storage",
    "sqlite_storage",
    "client",
    "shard",
    "validator"
]

[dependencies.tokio]
version = "1.47"
features = ["io-std", "macros"]
optional = true

[dependencies.reqwest]
version = "0.12"
features = ["socks", "h2", "http2", "rustls-tls", "rustls-tls-webpki-roots"]
default-features = false
optional = true

[dependencies.rusqlite]
version = "0.37"
features = ["bundled"]
optional = true

[dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3", optional = true }
axum = { version = "0.8", optional = true }
tracing = { version = "0.1", optional = true }
varint-rs = "2.2"
time = "0.3"
blake3 = "1.8"
k256 = "0.13"
base64 = "0.22"
zstd = "0.13"

[dev-dependencies]
rand_chacha = "0.3"
